fix: css not being applied correctly on some elements on ios

--- a/src/app/shared/components/template/components/layout/popup/popup.component.scss
+++ b/src/app/shared/components/template/components/layout/popup/popup.component.scss
@@ -1,3 +1,5 @@
+@use "/src/theme/mixins";
+
 .popup-backdrop {
   height: 100vh;
   width: 100%;
@@ -38,6 +40,7 @@
     display: none;
   }
   .close-button {
+    @include mixins.hack-webkit-reset;
     position: absolute;
     top: 16px;
     right: 22px;
