--- a/src/theme/_mixins.scss
+++ b/src/theme/_mixins.scss
@@ -37,3 +37,15 @@
   height: 80px;
   width: 80px;
 }
+
+/*
+* HACK: A bug on iOS (native capacitor and safari) causes some CSS rules to sporadically not be applied on some elements.
+* E.g.
+* https://github.com/IDEMSInternational/parenting-app-ui/issues/2262
+* https://github.com/IDEMSInternational/parenting-app-ui/issues/2274
+* https://github.com/IDEMSInternational/parenting-app-ui/issues/2287
+* A workaround is to apply an empty transformation to the element (see, for example https://michaeluloth.com/css-translate-z/)
+*/
+@mixin hack-webkit-reset {
+  -webkit-transform: translateZ(0);
+}
